--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
@@ -22,11 +23,11 @@
   <!-- Css simplebar -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplebar/5.3.9/simplebar.min.css" />
 
-  <title>Minimal UI Kit</title>
+  <title>방과후 한자수업</title>
   <meta name="description"
-    content="The starting point for your next project with Minimal UI Kit, built on the newest version of Material-UI ©, ready to be customized to your style" />
+    content="방과후 한자수업 학생들을 위학 사이트입니다." />
   <meta name="keywords" content="react,material,kit,application,dashboard,admin,template" />
-  <meta name="author" content="Minimal UI Kit" />
+  <meta name="author" content="방과후 한자수업" />
 
   <script src="/assets/js/config.js"></script>
 
